--- a/tools/installOneClick-stable-diffusion.ipynb
+++ b/tools/installOneClick-stable-diffusion.ipynb
@@ -14,114 +14,187 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7cd415e-9e19-48ff-96a7-6a57a0f86da5",
+   "id": "0c5e61db-4f25-4c9e-abb4-817e60ed3187",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import os,subprocess\n",
-    "from ipywidgets import interact,widgets\n",
-    "from IPython.display import display,clear_output\n",
-    "\n",
-    "btnArray = []\n",
-    "region = '未知'\n",
-    "proxy = 'cd ./' #一句没有实际作用的命令作为占位\n",
-    "\n",
     "ipDict = {\n",
-    "            '芜湖':'192.168.0.91',\n",
-    "            '北京':'100.72.64.19',\n",
-    "            '内蒙':'192.168.1.174',\n",
-    "            '泉州':'10.55.146.88',\n",
-    "            '南京':'172.181.217.43',\n",
-    "            '佛山':'192.168.126.12',\n",
-    "         }\n",
+    "    '芜湖': '192.168.0.91',\n",
+    "    '北京': '100.72.64.19',\n",
+    "    '内蒙': '192.168.1.174',\n",
+    "    '泉州': '10.55.146.88',\n",
+    "    '南京': '172.181.217.43',\n",
+    "    '佛山': '192.168.126.12',\n",
+    "}\n",
+    "\n",
+    "def ping_threading(ipDict):\n",
+    "    import threading\n",
+    "    import subprocess\n",
+    "    import time\n",
+    "    from queue import Queue\n",
+    "\n",
+    "\n",
+    "    # 定义工作线程\n",
+    "    WORD_THREAD = 10\n",
+    "\n",
+    "    # 将需要 ping 的 ip 加入队列\n",
+    "    IP_QUEUE = Queue() \n",
+    "    for i in ipDict:\n",
+    "        IP_QUEUE.put({'ip':ipDict[i],'region':i})\n",
+    "\n",
+    "    # 定义一个执行 ping 的函数\n",
+    "\n",
+    "\n",
+    "    def ping_ip():\n",
+    "        while (not IP_QUEUE.empty()):\n",
+    "            cb = IP_QUEUE.get()\n",
+    "            test_ip = cb['ip']\n",
+    "            test_region = cb['region']\n",
+    "            res = subprocess.call('ping -c 1 -w 1 %s' % test_ip,stdout=subprocess.PIPE,shell=True)  # linux 系统将 '-n' 替换成 '-c' ，而且设置shell=True，详情请参考：https://xilou.info/p/118\n",
+    "            # 打印运行结果\n",
+    "            if res == 0:\n",
+    "                global region,ip\n",
+    "                region = test_region\n",
+    "                ip = test_ip\n",
+    "                # print(region,ip,True if res == 0 else False)\n",
+    "                break\n",
+    "        \n",
+    "    threads = []\n",
+    "    start_time = time.time()\n",
+    "    for i in range(WORD_THREAD):\n",
+    "        thread = threading.Thread(target=ping_ip)\n",
+    "        thread.start()\n",
+    "        threads.append(thread)\n",
+    "\n",
+    "    for thread in threads:\n",
+    "        thread.join()\n",
+    "    \n",
+    "    print('Ping程序运行耗时：%s' % (time.time() - start_time))\n",
+    "    return {'region':region,'ip':ip}\n",
+    "\n",
+    "def getProxyURL(ip):\n",
+    "    return f'http://{ip}:12798'\n",
     "\n",
     "def autoRegion():\n",
-    "    for key in ipDict:\n",
-    "        ip = ipDict[key]\n",
-    "        if(os.system(f'ping -c 1 -w 1 {ip}')==0):\n",
-    "            print('OK')\n",
-    "            global region,proxy\n",
-    "            region = key\n",
-    "            proxy = makeCLI(ip)\n",
-    "            clear_output(wait=True)\n",
-    "            break\n",
-    "        else:\n",
-    "            print('Connection failed')\n",
-    "            continue\n",
-    "            \n",
-    "def makeCLI(ip):\n",
-    "    return f'export http_proxy=http://{ip}:12798 && export https_proxy=http://{ip}:12798'\n",
-    "\n",
-    "def printSuccess(region):\n",
-    "    # print(f'已挂载【{region}】对应的代理')\n",
-    "    picked.button_style='info'\n",
-    "    picked.description = f'在使用【{region}】代理'\n",
-    "    # picked.icon = 'check'\n",
-    "\n",
-    "def printFail():\n",
-    "    # print(f'已挂载【{region}】对应的代理')\n",
-    "    picked.button_style='warning'\n",
-    "    picked.description = f'没有合适的代理'\n",
-    "    picked.icon = 'exclamation-triangle'\n",
-    "\n",
-    "def autoClick(region):\n",
-    "    for o in btnArray:#取消所有按钮被选中的样式\n",
-    "        o.button_style=''\n",
-    "        o.icon=''\n",
-    "    printSuccess(region)\n",
-    "    for k in btnArray:\n",
-    "        if k.description == region:            \n",
-    "            k.button_style='success'\n",
-    "            k.icon = 'check'\n",
-    "    \n",
-    "def btn_eventhandle(obj):\n",
-    "    global region,proxy\n",
-    "    for o in btnArray:#取消所有按钮被选中的样式\n",
-    "        o.button_style=''\n",
-    "        o.icon=''\n",
-    "    obj.button_style='success'\n",
-    "    obj.icon = 'check'\n",
-    "    region = obj.description\n",
-    "    ip = ipDict[region]\n",
+    "    global region, proxy, proxyURL\n",
+    "    cb=ping_threading(ipDict)\n",
+    "    region = cb['region']\n",
+    "    ip = cb['ip']\n",
     "    proxy = makeCLI(ip)\n",
-    "    printSuccess(obj.description)\n",
+    "    proxyURL = getProxyURL(ip)\n",
+    "    # for key in ipDict:\n",
+    "    #     ip = ipDict[key]\n",
+    "    #     if (os.system(f'ping -c 1 -w 1 {ip}') == 0):\n",
+    "    #         # print('OK')\n",
+    "    #         global region, proxy\n",
+    "    #         region = key\n",
+    "    #         proxy = makeCLI(ip)\n",
+    "    #         break\n",
+    "    #     else:\n",
+    "    #         # print('Connection failed')\n",
+    "    #         continue\n",
     "\n",
-    "picked = widgets.Button(\n",
-    "    value=False,\n",
-    "    description=f'自动侦测中...',\n",
-    "    disabled=False,\n",
-    "    button_style='warning', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='请点击下方的区名',\n",
-    "    icon='question-circle' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
+    "def makeCLI(ip):\n",
+    "    return f'export http_proxy={getProxyURL(ip)} && export https_proxy={getProxyURL(ip)}'\n",
+    "\n",
+    "def setProxy():\n",
+    "\n",
+    "    import os\n",
+    "    import subprocess\n",
+    "    from ipywidgets import interact, widgets\n",
+    "    from IPython.display import display, clear_output\n",
     "    \n",
-    "for i in ipDict:\n",
-    "    btn =  widgets.Button(\n",
+    "    global region, proxy ,proxyURL\n",
+    "    btnArray = []\n",
+    "    region = '未知'\n",
+    "    proxy = 'cd ./'  # 一句没有实际作用的命令作为占位\n",
+    "\n",
+    "    def printSuccess(region):\n",
+    "        # print(f'已挂载【{region}】对应的代理')\n",
+    "        picked.button_style = 'info'\n",
+    "        picked.description = f'在使用【{region}】代理'\n",
+    "        # picked.icon = 'check'\n",
+    "\n",
+    "\n",
+    "    def printFail():\n",
+    "        # print(f'已挂载【{region}】对应的代理')\n",
+    "        picked.button_style = 'warning'\n",
+    "        picked.description = f'没有合适的代理'\n",
+    "        picked.icon = 'exclamation-triangle'\n",
+    "\n",
+    "\n",
+    "    def autoClick(region):\n",
+    "        for o in btnArray:  # 取消所有按钮被选中的样式\n",
+    "            o.button_style = ''\n",
+    "            o.icon = ''\n",
+    "        printSuccess(region)\n",
+    "        for k in btnArray:\n",
+    "            if k.description == region:\n",
+    "                k.button_style = 'success'\n",
+    "                k.icon = 'check'\n",
+    "\n",
+    "\n",
+    "    def btn_eventhandle(obj):\n",
+    "        global region, proxy\n",
+    "        for o in btnArray:  # 取消所有按钮被选中的样式\n",
+    "            o.button_style = ''\n",
+    "            o.icon = ''\n",
+    "        obj.button_style = 'success'\n",
+    "        obj.icon = 'check'\n",
+    "        region = obj.description\n",
+    "        ip = ipDict[region]\n",
+    "        proxy = makeCLI(ip)\n",
+    "        printSuccess(obj.description)\n",
+    "\n",
+    "\n",
+    "    picked = widgets.Button(\n",
+    "        value=False,\n",
+    "        description=f'自动侦测中...',\n",
+    "        disabled=False,\n",
+    "        button_style='warning',  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "        tooltip='请点击下方的区名',\n",
+    "        icon='question-circle'  # (FontAwesome names without the `fa-` prefix)\n",
+    "    )\n",
+    "\n",
+    "    for i in ipDict:\n",
+    "        btn = widgets.Button(\n",
     "            description=i,\n",
     "            disabled=False,\n",
-    "            button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "            button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
     "            tooltip='Click me',\n",
     "            # icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "            )\n",
-    "    btn.on_click(btn_eventhandle)\n",
-    "    btnArray.append(btn)\n",
+    "        )\n",
+    "        btn.on_click(btn_eventhandle)\n",
+    "        btnArray.append(btn)\n",
     "\n",
-    "btnArray.insert(0,picked)\n",
+    "    btnArray.insert(0, picked)\n",
     "\n",
-    "for e in btnArray:\n",
-    "    display(e)\n",
-    "    \n",
-    "autoRegion()\n",
-    "if region!='未知':\n",
-    "    autoClick(region)\n",
-    "else:\n",
+    "    for e in btnArray:\n",
+    "        display(e)\n",
+    "\n",
+    "    autoRegion()\n",
     "    clear_output(wait=True)\n",
-    "    printFail()\n",
     "\n",
-    "for e in btnArray:\n",
-    "    display(e)"
+    "    if region != '未知':\n",
+    "        autoClick(region)\n",
+    "    else:\n",
+    "        clear_output(wait=True)\n",
+    "        printFail()\n",
+    "\n",
+    "    for e in btnArray:\n",
+    "        display(e)\n",
+    "        \n",
+    "    return({'region':region,'proxy':proxy,'proxyURL':proxyURL})\n",
+    "\n",
+    "\n",
+    "cb=setProxy()\n",
+    "proxy=cb['proxy']\n",
+    "region=cb['region']"
    ]
   },
   {
@@ -147,6 +220,9 @@
    "execution_count": null,
    "id": "90d07288-756b-416b-ad8d-4146a45b0c90",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true,
     "tags": []
    },
