add remote get Xformers precomplied .whl file

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -200,25 +200,37 @@
     "    alertBtn.description='正在更新...'\n",
     "    alertBtn.button_style='warning'\n",
     "    alertBtn.icon='upload'\n",
-    "\n",
-    "    r = !source activate &&\\\n",
+    "    \n",
+    "    !source activate &&\\\n",
     "    conda activate py3.10.6 &&\\\n",
     "    $proxy &&\\\n",
     "    cd $webUIDir &&\\\n",
     "    git pull &&\\\n",
     "    python -V &&\\\n",
     "    python -m pip install -r requirements.txt\n",
-    "\n",
-    "    # print(r)\n",
     "    \n",
-    "    if 'Already up to date.' in r:\n",
-    "        alertBtn.description='更新完成!'\n",
-    "        alertBtn.button_style='success'\n",
-    "        alertBtn.icon='check'\n",
-    "    else:\n",
-    "        alertBtn.description='更新失败!'\n",
-    "        alertBtn.button_style='danger'\n",
-    "        alertBtn.icon='exclamation'\n",
+    "    alertBtn.description='更新完成!'\n",
+    "    alertBtn.button_style='success'\n",
+    "    alertBtn.icon='check'\n",
+    "    \n",
+    "#     r = !source activate &&\\\n",
+    "#     conda activate py3.10.6 &&\\\n",
+    "#     $proxy &&\\\n",
+    "#     cd $webUIDir &&\\\n",
+    "#     git pull &&\\\n",
+    "#     python -V &&\\\n",
+    "#     python -m pip install -r requirements.txt\n",
+    "\n",
+    "#     display(r)\n",
+    "    \n",
+    "#     if 'Already up to date.' in r:\n",
+    "#         alertBtn.description='更新完成!'\n",
+    "#         alertBtn.button_style='success'\n",
+    "#         alertBtn.icon='check'\n",
+    "#     else:\n",
+    "#         alertBtn.description='更新失败!'\n",
+    "#         alertBtn.button_style='danger'\n",
+    "#         alertBtn.icon='exclamation'\n",
     "\n",
     "\n",
     "# clear_output(wait=True)\n",
@@ -265,16 +277,21 @@
     "from subprocess import getoutput\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display,clear_output\n",
-    "from func.env import getArch,getDirSize\n",
+    "from func.env import getArch,getDirSize,setProxy\n",
     "import json\n",
     "\n",
-    "# cb = !source activate &&\\\n",
-    "# conda activate py3.10.6 &&\\\n",
-    "# python getArch.py\n",
+    "try:\n",
+    "    proxy,region\n",
+    "except NameError:\n",
+    "    cb=setProxy()\n",
+    "    proxy=cb['proxy']\n",
+    "    region=cb['region']\n",
+    "    clear_output(wait=True)\n",
     "\n",
     "cb = getArch()\n",
     "arch = cb['arch']\n",
     "gpu = cb['gpu']\n",
+    "whlSize = cb['whlSize']\n",
     "\n",
     "hasInstalledBtn = widgets.Button(\n",
     "    value=False,\n",
@@ -304,31 +321,54 @@
     "    conda activate py3.10.6 &&\\\n",
     "    python -c \"import xformers,os;print(os.path.dirname(xformers.__file__));\"\n",
     "    return cb[0]\n",
-    "    \n",
-    "def installCMD(arch):\n",
+    "\n",
+    "def installCMD(whlDir):\n",
     "    args = [\n",
-    "        'source activate','&&',\n",
-    "        'conda activate py3.10.6','&&',\n",
-    "        'pip uninstall xformers -y','&&',\n",
-    "        f'pip install /root/xformers_0.0.14.dev0/{arch}/xformers-0.0.14.dev0-cp310-cp310-linux_x86_64.whl'\n",
-    "       ]\n",
+    "    'source activate','&&',\n",
+    "    'conda activate py3.10.6','&&',\n",
+    "    'pip uninstall xformers -y','&&',\n",
+    "    f'pip install {whlDir}'\n",
+    "    ]\n",
     "    cmd = (\" \").join(args) \n",
     "    !$cmd\n",
-    "\n",
     "    xformersInstalledDir = getXformersDir()\n",
     "    archTextDir = os.path.join(xformersInstalledDir,'./arch.txt')\n",
-    "    \n",
+    "\n",
     "    with open(archTextDir,\"w\") as archText:\n",
     "        archText.write(arch)\n",
-    "    \n",
+    "\n",
     "    with  open(archTextDir,'r') as file:\n",
     "        print(file.read())\n",
-    "    \n",
-    "    clear_output(wait=True)\n",
+    "\n",
+    "    clear_output(wait=True) # 生产环境下清除日志\n",
     "    showToast()\n",
     "    display(finishedInstallBtn)\n",
     "\n",
-    "archWhiteList = ['sm80','sm75','sm70','sm89','sm61']\n",
+    "def downloadWhl(fileDir,fileName,url):\n",
+    "    if (not os.path.exists(fileDir)):\n",
+    "        os.makedirs(fileDir)\n",
+    "    filePath = os.path.join(fileDir,fileName)\n",
+    "    !$proxy && wget -O $filePath $url\n",
+    "\n",
+    "def installExec(arch):\n",
+    "    whlFileName = 'xformers-0.0.14.dev0-cp310-cp310-linux_x86_64.whl'\n",
+    "    whlFileDir = f'/root/autodl-tmp/pkg/Xformers_precompiled/xformers_0.0.14.dev0/{arch}/'\n",
+    "    whlFilePath = os.path.join(whlFileDir,whlFileName)\n",
+    "    url = f'https://github.com/lcolok/Xformers_precompiled/raw/main/linux/{arch}/{whlFileName}'\n",
+    "    print(not os.path.exists(whlFilePath))\n",
+    "    if os.path.exists(whlFilePath)==False:\n",
+    "        print('预编译包不在本地，需要下载...')\n",
+    "        downloadWhl(whlFileDir,whlFileName,url)\n",
+    "    test_whlSize = os.path.getsize(whlFilePath)\n",
+    "    if whlSize==test_whlSize:\n",
+    "        print('目标文件大小一致，whl文件已经在本地')\n",
+    "        installCMD(whlFilePath)\n",
+    "    else:\n",
+    "        print('目标文件大小不一样')\n",
+    "        !rm -rf $whlFilePath\n",
+    "        installExec(arch)\n",
+    "\n",
+    "archWhiteList = ['sm80','sm75','sm70','sm89','sm61','sm86']\n",
     "\n",
     "if arch in archWhiteList:\n",
     "    # 通过python加载模块来检测是否有安装对应的模块\n",
@@ -336,24 +376,22 @@
     "    conda activate py3.10.6 &&\\\n",
     "    python -c \"import xformers,os;print(xformers.__file__);\"\n",
     "    if cb[0]=='None':\n",
-    "        installCMD(arch)\n",
+    "        installExec(arch)\n",
     "    else:\n",
     "        xformersInstalledDir = getXformersDir()\n",
     "        archTextDir = os.path.join(xformersInstalledDir,'./arch.txt')\n",
-    "        with  open(archTextDir,'r') as file:\n",
-    "            installedArch = file.read()\n",
-    "        # print(installedArch)\n",
-    "        if installedArch!=arch:\n",
-    "            installCMD(arch)\n",
+    "        if os.path.exists(archTextDir):\n",
+    "            with  open(archTextDir,'r') as file:\n",
+    "                installedArch = file.read()\n",
+    "            # print(installedArch)\n",
+    "            if installedArch!=arch:\n",
+    "                installExec(arch)\n",
+    "            else:\n",
+    "                # 已经预装好了\n",
+    "                showToast()\n",
+    "                display(hasInstalledBtn)\n",
     "        else:\n",
-    "            # 已经预装好了\n",
-    "            showToast()\n",
-    "            display(hasInstalledBtn)\n",
-    "        \n",
-    "elif arch == 'sm86':\n",
-    "    # print('该镜像已经预装该版本的编译包')\n",
-    "    display(hasInstalledBtn)\n",
-    "\n",
+    "            installExec(arch)\n",
     "else:\n",
     "    print(f'没有合适{gpu}的Xformers编译包')\n",
     "    display(\n",
