split Xformers installer into .py file

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -268,144 +268,16 @@
     "jupyter": {
      "source_hidden": true
     },
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
-    "from subprocess import getoutput\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display,clear_output\n",
-    "from func.env import getArch,getDirSize,setProxy\n",
-    "import json\n",
+    "from func.xformers import installXformers\n",
     "\n",
-    "try:\n",
-    "    proxy,region\n",
-    "except NameError:\n",
-    "    cb=setProxy()\n",
-    "    proxy=cb['proxy']\n",
-    "    region=cb['region']\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "cb = getArch()\n",
-    "arch = cb['arch']\n",
-    "gpu = cb['gpu']\n",
-    "whlSize = cb['whlSize']\n",
-    "\n",
-    "hasInstalledBtn = widgets.Button(\n",
-    "    value=False,\n",
-    "    description='已经预装',\n",
-    "    disabled=False,\n",
-    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Description',\n",
-    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "    )\n",
-    "\n",
-    "finishedInstallBtn = widgets.Button(\n",
-    "    value=False,\n",
-    "    description='完成Xformers安装',\n",
-    "    disabled=False,\n",
-    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Description',\n",
-    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "    )\n",
-    "\n",
-    "def showToast():\n",
-    "    print(f'本机GPU为【{gpu}】，对应的英伟达架构名为【{arch}】，已安装匹配【{arch}】架构的Xformers预编译包')\n",
-    "\n",
-    "    \n",
-    "def getXformersDir():\n",
-    "    # 查询已经安装好的xformers所在的目录位置\n",
-    "    cb = !source activate &&\\\n",
-    "    conda activate py3.10.6 &&\\\n",
-    "    python -c \"import xformers,os;print(os.path.dirname(xformers.__file__));\"\n",
-    "    return cb[0]\n",
-    "\n",
-    "def installCMD(whlDir):\n",
-    "    args = [\n",
-    "    'source activate','&&',\n",
-    "    'conda activate py3.10.6','&&',\n",
-    "    'pip uninstall xformers -y','&&',\n",
-    "    f'pip install {whlDir}'\n",
-    "    ]\n",
-    "    cmd = (\" \").join(args) \n",
-    "    !$cmd\n",
-    "    xformersInstalledDir = getXformersDir()\n",
-    "    archTextDir = os.path.join(xformersInstalledDir,'./arch.txt')\n",
-    "\n",
-    "    with open(archTextDir,\"w\") as archText:\n",
-    "        archText.write(arch)\n",
-    "\n",
-    "    with  open(archTextDir,'r') as file:\n",
-    "        print(file.read())\n",
-    "\n",
-    "    clear_output(wait=True) # 生产环境下清除日志\n",
-    "    showToast()\n",
-    "    display(finishedInstallBtn)\n",
-    "\n",
-    "def downloadWhl(fileDir,fileName,url):\n",
-    "    if (not os.path.exists(fileDir)):\n",
-    "        os.makedirs(fileDir)\n",
-    "    filePath = os.path.join(fileDir,fileName)\n",
-    "    !$proxy && wget -O $filePath $url\n",
-    "\n",
-    "def installExec(arch):\n",
-    "    whlFileName = 'xformers-0.0.14.dev0-cp310-cp310-linux_x86_64.whl'\n",
-    "    whlFileDir = f'/root/autodl-tmp/pkg/Xformers_precompiled/xformers_0.0.14.dev0/{arch}/'\n",
-    "    whlFilePath = os.path.join(whlFileDir,whlFileName)\n",
-    "    url = f'https://github.com/lcolok/Xformers_precompiled/raw/main/linux/{arch}/{whlFileName}'\n",
-    "    print(not os.path.exists(whlFilePath))\n",
-    "    if os.path.exists(whlFilePath)==False:\n",
-    "        print('预编译包不在本地，需要下载...')\n",
-    "        downloadWhl(whlFileDir,whlFileName,url)\n",
-    "    test_whlSize = os.path.getsize(whlFilePath)\n",
-    "    if whlSize==test_whlSize:\n",
-    "        print('目标文件大小一致，whl文件已经在本地')\n",
-    "        installCMD(whlFilePath)\n",
-    "    else:\n",
-    "        print('目标文件大小不一样')\n",
-    "        !rm -rf $whlFilePath\n",
-    "        installExec(arch)\n",
-    "\n",
-    "archWhiteList = ['sm80','sm75','sm70','sm89','sm61','sm86']\n",
-    "\n",
-    "if arch in archWhiteList:\n",
-    "    # 通过python加载模块来检测是否有安装对应的模块\n",
-    "    cb=!source activate &&\\\n",
-    "    conda activate py3.10.6 &&\\\n",
-    "    python -c \"import xformers,os;print(xformers.__file__);\"\n",
-    "    if cb[0]=='None':\n",
-    "        installExec(arch)\n",
-    "    else:\n",
-    "        xformersInstalledDir = getXformersDir()\n",
-    "        archTextDir = os.path.join(xformersInstalledDir,'./arch.txt')\n",
-    "        if os.path.exists(archTextDir):\n",
-    "            with  open(archTextDir,'r') as file:\n",
-    "                installedArch = file.read()\n",
-    "            # print(installedArch)\n",
-    "            if installedArch!=arch:\n",
-    "                installExec(arch)\n",
-    "            else:\n",
-    "                # 已经预装好了\n",
-    "                showToast()\n",
-    "                display(hasInstalledBtn)\n",
-    "        else:\n",
-    "            installExec(arch)\n",
-    "else:\n",
-    "    print(f'没有合适{gpu}的Xformers编译包')\n",
-    "    display(\n",
-    "        widgets.Button(\n",
-    "            value=False,\n",
-    "            description=f'自动跳过安装',\n",
-    "            disabled=False,\n",
-    "            button_style='warning', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "            tooltip='Description',\n",
-    "            icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n"
+    "installXformers()"
    ]
   },
   {
@@ -455,38 +327,49 @@
     "    # icon='check' # (FontAwesome names without the `fa-` prefix)\n",
     ")\n",
     "\n",
-    "def install_language_pack(obj):\n",
-    "    # print(\"开始安装\")\n",
-    "    zhLocalDir = findDir('stable-diffusion-webui-localization-zh_CN',extDir)\n",
-    "    \n",
-    "    stdout = !{proxy} &&\\\n",
-    "    cd $extDir &&\\\n",
-    "    git clone https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN\n",
-    "    \n",
+    "def checkInstalled(zhLocalDir,firstInstall):\n",
     "    fileSize = getDirSize(zhLocalDir)\n",
-    "\n",
-    "    # print(f'file size:{fileSize}')\n",
-    "    for i in stdout:\n",
-    "        # print(i)\n",
-    "        if fileSize>=171055 :\n",
-    "            if \"already exists and is not an empty directory\" in i:\n",
-    "                btn.description='已经安装过'\n",
-    "                btn.button_style='info'\n",
-    "                btn.icon='check-circle'\n",
-    "            else:\n",
-    "                btn.description='安装成功!'\n",
-    "                btn.button_style='success'\n",
-    "                btn.icon='check'\n",
+    "    if fileSize>=171055 :\n",
+    "        if firstInstall==True:\n",
+    "            btn.description='安装成功!'\n",
+    "            btn.button_style='success'\n",
+    "            btn.icon='check'\n",
     "        else:\n",
-    "            # !rm -rf {dirpath}\n",
-    "            btn.description=\"安装失败\"\n",
-    "            btn.button_style='danger'\n",
-    "            btn.icon='exclamation-triangle'\n",
+    "            btn.description='已经安装过'\n",
+    "            btn.button_style='info'\n",
+    "            btn.icon='check-circle'\n",
+    "    else:\n",
+    "        # !rm -rf {dirpath}\n",
+    "        btn.description=\"安装失败\"\n",
+    "        btn.button_style='danger'\n",
+    "        btn.icon='exclamation-triangle'\n",
+    "\n",
+    "def install_language_pack(obj):\n",
+    "    zhLocalDir = os.path.join(extDir,'stable-diffusion-webui-localization-zh_CN')\n",
+    "    if os.path.exists(zhLocalDir):\n",
+    "        checkInstalled(zhLocalDir,False)\n",
+    "    else:\n",
+    "        import subprocess\n",
+    "        try:\n",
+    "            btn.description='安装中...'\n",
+    "            btn.button_style='warning'\n",
+    "            btn.icon='download'\n",
+    "            obj = subprocess.check_call(\n",
+    "                f'{proxy} &&\\\n",
+    "                cd {extDir} &&\\\n",
+    "                git clone https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN',\n",
+    "                shell=True,\n",
+    "                universal_newlines=True,\n",
+    "                stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.STDOUT,\n",
+    "            )\n",
+    "            if obj==0:\n",
+    "                checkInstalled(zhLocalDir,True)\n",
+    "        except subprocess.CalledProcessError as e:\n",
+    "            print(\"Exception on process, rc=\", e.returncode, \"output=\", e.output)\n",
     "\n",
     "# btn.on_click(install_language_pack)\n",
-    "# btn\n",
-    "install_language_pack(btn)\n",
-    "display(btn)"
+    "display(btn)\n",
+    "install_language_pack(btn)"
    ]
   },
   {
@@ -537,7 +420,7 @@
     "\n",
     "stylesDir = os.path.join(webUIDir, 'styles.csv')\n",
     "if os.path.exists(stylesDir):\n",
-    "    alertBtn.description='已经安装过'\n",
+    "    alertBtn.description='本地已有Style文件'\n",
     "    alertBtn.button_style='info'\n",
     "    alertBtn.icon='check-circle'\n",
     "else:  \n",
@@ -595,6 +478,7 @@
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
     "from IPython.display import display,clear_output\n",
+    "from func.xformers import checkXformersInstalled\n",
     "\n",
     "archCondition = False\n",
     "canUseXformers = False\n",
@@ -614,11 +498,12 @@
     "else:\n",
     "    archCondition = False\n",
     "        \n",
-    "xformerFolderSize = getDirSize(xformersDir)\n",
-    "if(xformerFolderSize>=268769047 and archCondition):\n",
+    "if(checkXformersInstalled() and archCondition):\n",
     "    canUseXformers = True\n",
     "else:\n",
     "    canUseXformers = False\n",
+    "\n",
+    "canUseXformers = True\n",
     "\n",
     "args = [\n",
     "        'source activate','&&',\n",
