--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -276,8 +276,18 @@
     "import os,sys\n",
     "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
     "from func.xformers import installXformers\n",
+    "from func.env import setProxy\n",
+    "from IPython.display import clear_output\n",
     "\n",
-    "installXformers()"
+    "try:\n",
+    "    proxy,region\n",
+    "except NameError:\n",
+    "    cb=setProxy()\n",
+    "    proxy=cb['proxy']\n",
+    "    region=cb['region']\n",
+    "    clear_output(wait=True)\n",
+    "\n",
+    "installXformers(proxy,region)"
    ]
   },
   {
@@ -358,6 +368,99 @@
     "                f'{proxy} &&\\\n",
     "                cd {extDir} &&\\\n",
     "                git clone https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN',\n",
+    "                shell=True,\n",
+    "                universal_newlines=True,\n",
+    "                stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.STDOUT,\n",
+    "            )\n",
+    "            if obj==0:\n",
+    "                checkInstalled(zhLocalDir,True)\n",
+    "        except subprocess.CalledProcessError as e:\n",
+    "            print(\"Exception on process, rc=\", e.returncode, \"output=\", e.output)\n",
+    "\n",
+    "# btn.on_click(install_language_pack)\n",
+    "display(btn)\n",
+    "install_language_pack(btn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0ecfea-9553-40f0-9789-9a5e0830c209",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## <i class=\"fa fa-language\"></i> 安装高分辨率修复原图调节拓展（可选）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7043df-12de-4797-ba03-81557dc50d08",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append('../') # 把上级路径也加入到系统路径中，这样就能够找到func\n",
+    "from func.env import setProxy,webUIDir,extDir,findDir,getDirSize\n",
+    "import ipywidgets as widgets\n",
+    "from subprocess import getoutput\n",
+    "from IPython.display import display,clear_output\n",
+    "\n",
+    "try:\n",
+    "    proxy,region\n",
+    "except NameError:\n",
+    "    cb=setProxy()\n",
+    "    proxy=cb['proxy']\n",
+    "    region=cb['region']\n",
+    "    clear_output(wait=True)\n",
+    "\n",
+    "btn = widgets.Button(\n",
+    "    value=False,\n",
+    "    description='安装高分辨率修复原图调节拓展',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    # tooltip='Description',\n",
+    "    # icon='check' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n",
+    "\n",
+    "def checkInstalled(zhLocalDir,firstInstall):\n",
+    "    fileSize = getDirSize(zhLocalDir)\n",
+    "    # print(fileSize)\n",
+    "    if fileSize>=48722 :\n",
+    "        if firstInstall==True:\n",
+    "            btn.description='安装成功!'\n",
+    "            btn.button_style='success'\n",
+    "            btn.icon='check'\n",
+    "        else:\n",
+    "            btn.description='已经安装过'\n",
+    "            btn.button_style='info'\n",
+    "            btn.icon='check-circle'\n",
+    "    else:\n",
+    "        # !rm -rf {dirpath}\n",
+    "        btn.description=\"安装失败\"\n",
+    "        btn.button_style='danger'\n",
+    "        btn.icon='exclamation-triangle'\n",
+    "\n",
+    "def install_language_pack(obj):\n",
+    "    zhLocalDir = os.path.join(extDir,'stable-diffusion-webui-conditioning-highres-fix')\n",
+    "    if os.path.exists(zhLocalDir):\n",
+    "        checkInstalled(zhLocalDir,False)\n",
+    "    else:\n",
+    "        import subprocess\n",
+    "        try:\n",
+    "            btn.description='安装中...'\n",
+    "            btn.button_style='warning'\n",
+    "            btn.icon='download'\n",
+    "            obj = subprocess.check_call(\n",
+    "                f'{proxy} &&\\\n",
+    "                cd {extDir} &&\\\n",
+    "                git clone https://github.com/klimaleksus/stable-diffusion-webui-conditioning-highres-fix',\n",
     "                shell=True,\n",
     "                universal_newlines=True,\n",
     "                stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.STDOUT,\n",
@@ -514,6 +617,7 @@
     "        '--opt-split-attention',\n",
     "        '--port 6006',\n",
     "        '--deepdanbooru',\n",
+    "        '--administrator'\n",
     "       ]\n",
     "\n",
     "try:\n",
