--- a/tools/installOneClick-stable-diffusion.ipynb
+++ b/tools/installOneClick-stable-diffusion.ipynb
@@ -109,10 +109,11 @@
     "    from ipywidgets import interact, widgets\n",
     "    from IPython.display import display, clear_output\n",
     "    \n",
-    "    global region, proxy ,proxyURL\n",
+    "    global region, proxy ,proxyURL,ip\n",
     "    btnArray = []\n",
     "    region = '未知'\n",
     "    proxy = 'cd ./'  # 一句没有实际作用的命令作为占位\n",
+    "    ip=''\n",
     "\n",
     "    def printSuccess(region):\n",
     "        # print(f'已挂载【{region}】对应的代理')\n",
