--- a/start.ipynb
+++ b/start.ipynb
@@ -67,75 +67,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911c56ec-1449-42c7-b07b-deef6fcd8357",
-   "metadata": {},
-   "source": [
-    "# <i class=\"fa fa-list\"></i> 所有脚本列表"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b555d90-df6c-4f66-a539-39d862e6bc8a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from ipywidgets import interact, widgets\n",
-    "from IPython.display import display, clear_output\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\"\n",
-    "\n",
-    "ipynbDict = {\n",
-    "    'oneClick_SD_WebUI':{\n",
-    "        'description':'启动 SD WebUI',\n",
-    "        'dirpath':'./ipynb/OneClick-stable-diffusion.ipynb'\n",
-    "    },\n",
-    "    '2':{\n",
-    "        'description':'启动 SD WebUI',\n",
-    "        'dirpath':'./ipynb/OneClick-stable-diffusion.ipynb'\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "ipynbBtnDict=[]\n",
-    "\n",
-    "def btn_eventhandle(obj):\n",
-    "    for eachone in ipynbBtnDict:\n",
-    "        eachone.close()\n",
-    "    output = %run $dirpath\n",
-    "    display(output)\n",
-    "    \n",
-    "for key in ipynbDict:\n",
-    "    ipynb=ipynbDict[key]\n",
-    "    description = ipynb['description']\n",
-    "    dirpath = ipynb['dirpath']\n",
-    "    btn = widgets.Button(\n",
-    "        value=False,\n",
-    "        description=description,\n",
-    "        disabled=False,\n",
-    "        button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "        tooltip='Click me',\n",
-    "        icon='globe', # (FontAwesome names without the `fa-` prefix)\n",
-    "    )\n",
-    "    btn.on_click(btn_eventhandle)\n",
-    "    ipynbBtnDict.append(btn)\n",
-    "    display(btn)\n",
-    "    \n",
-    "# for eachBtn in ipynbBtnDict:\n",
-    "#     display(eachBtn)\n",
-    "\n",
-    "# %run ./ipynb/OneClick-stable-diffusion.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7ea0af26-9c23-4ebe-8a87-3547f1ec6fa8",
    "metadata": {},
    "source": [
-    "## 一键启动Stable Diffusion WebUI"
+    "## 启动Stable Diffusion WebUI"
    ]
   },
   {
@@ -156,7 +91,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('py3.10.6': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
